移动端节课

--- a/10期JS正式课/正式课第九周/webApp/css/index.less
+++ b/10期JS正式课/正式课第九周/webApp/css/index.less
@@ -109,9 +109,169 @@ a {
   }
 }
 
+/*--MATCH--*/
+.match {
+  padding: .3rem;
+  background: @color-white;
 
+  /*TOP*/
+  .top {
+    height: .6rem;
 
+    .left {
+      float: left;
+      width: 34%;
+      height: 100%;
+      text-align: left;
 
+      img {
+        display: inline-block;
+        width: .6rem;
+        height: .6rem;
+        vertical-align: middle;
+      }
 
+      span {
+        display: inline-block;
+        margin-left: .24rem;
+        font-size: .4rem;
+        vertical-align: middle;
+      }
+    }
 
+    .right {
+      .left;
+      text-align: right;
+      span {
+        margin-left: 0;
+        margin-right: .24rem;
+      }
+    }
 
+    .center {
+      float: left;
+      width: 32%;
+      height: 100%;
+      line-height: .6rem;
+      text-align: center;
+      color: @color-gray;
+      font-size: .24rem;
+    }
+  }
+
+  /*MIDDLE*/
+  .middle {
+    position: relative;
+    margin: .2rem 0;
+    height: .04rem;
+    background: @color-blue;
+
+    .progress {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 0;
+      height: 100%;
+      background: @color-red;
+      .transition(@duration:.5s);
+    }
+  }
+
+  /*BOTTOM*/
+  .bottom {
+    height: .4rem;
+    line-height: .4rem;
+    text-align: center;
+    color: @color-gray;
+    font-size: .24rem;
+
+    .center {
+      float: left;
+      width: 32%;
+      height: 100%;
+    }
+
+    .left {
+      float: left;
+      width: 34%;
+      height: 100%;
+      background: url("@{img-url}/support-left.png") no-repeat left center;
+      background-size: .24rem .24rem;
+
+      &.bg {
+        color: @color-red;
+        background: url("@{img-url}/support-red.png") no-repeat left center;
+        background-size: .24rem .24rem;
+      }
+    }
+
+    .right {
+      .left;
+      background: url("@{img-url}/support-right.png") no-repeat right center;
+      background-size: .24rem .24rem;
+
+      &.bg {
+        color: @color-blue;
+        background: url("@{img-url}/support-blue.png") no-repeat right center;
+        background-size: .24rem .24rem;
+      }
+    }
+  }
+}
+
+/*--PLAYER--*/
+.player {
+  position: relative;
+  padding: .2rem .3rem;
+  height: 2.14rem;
+  background: @color-white;
+  overflow: hidden;
+
+  .wrapper {
+    position: absolute;
+    left: .3rem;
+    top: .2rem;
+    width: 100rem; /*不确定,需要读取都内容后动态设置*/
+    height: 2.14rem;
+
+    /*一个LI占了2.4rem*/
+    li {
+      float: left;
+      margin-right: .2rem;
+
+      a {
+        width: 2.2rem;
+        div {
+          position: relative;
+          height: 1.24rem;
+          img {
+            width: 100%;
+            height: 100%;
+          }
+          span {
+            position: absolute;
+            right: 0;
+            bottom: 0;
+            padding: .08rem;
+            height: .31rem;
+            line-height: .31rem;
+            background: rgba(0, 0, 0, 0.5);
+            color: @color-white;
+            font-size: .24rem;
+          }
+        }
+
+        p {
+          font-size: .24rem;
+          line-height: .3rem;
+        }
+
+        &.bg {
+          p {
+            color: @color-red;
+          }
+        }
+      }
+    }
+  }
+}
